--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,23 +1,3 @@
-# -----------------------------
-# Material Theme Configuration
-# ------------------------------
-# red, pink, purple, deep purple, indigo, 
-# blue, light blue, cyan, teal, green, light green, 
-# lime, yellow, amber, orange, deep orange, brown, 
-# grey, blue grey , black, white
-#    primary: pink # teal
-#    accent: indigo
-#
-# *** FONT ***
-# Guide: https://squidfunk.github.io/mkdocs-material/setup/changing-the-fonts/?h=fonts
-# Google Fonts Supported: https://fonts.google.com/
-#
-# *** BLOG ***
-# https://squidfunk.github.io/mkdocs-material/setup/setting-up-a-blog/
-# ---------------------------------
-
-
-
 # Project information .........................................
 site_name: "Session Title"
 site_url: 
@@ -42,7 +22,7 @@ theme:
   font:
     code: Roboto Mono  #Monospaced
     text: Roboto       #Regular
-  logo: assets/AITour.png
+  logo: img/AITour.png
   language: en
 
   # Theme Modes ...............................................
@@ -84,6 +64,7 @@ theme:
     - navigation.footer
     - content.code.copy             # allow copy-paste from codeblocks
     - content.tabs.link             # Ensures site-wide switch to same tab name
+    - content.tooltips              # hover-over tooltips
 
 # Extras  ...............................................
 extra:
@@ -111,7 +92,9 @@ markdown_extensions:
   - pymdownx.highlight:
       auto_title: true
       linenums: true
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      auto_append:
+        - ../includes/glossary.md
   - pymdownx.tabbed:
       alternate_style: true
       slugify: !!python/object/apply:pymdownx.slugs.slugify
