Add evaluation demo notebooks and documentation
- Added comprehensive demo documentation for Zava Enterprise scenario
- Documented Leaderboards, Simulator, and Evaluation Flow demos with screenshots
- Added new notebooks: 02-simulate-dataset.ipynb and 03-run-evaluation.ipynb
- Added simulator results and model comparison screenshots to assets
- Updated variable naming from AZURE_AISEARCH_* to AZURE_SEARCH_* for consistency
- Pinned azure-ai-evaluation to v1.12.0 for stability
- Updated update-env.sh script to retrieve Search API key automatically
- Updated flow diagram in session-delivery-resources

--- a/src/scripts/.env.sample
+++ b/src/scripts/.env.sample
@@ -14,6 +14,7 @@ AZURE_OPENAI_DEPLOYMENT="gpt-4.1"
 AZURE_OPENAI_MODEL_VERSION="2025-04-14"
 
 # .... Azure AI Search
-AZURE_AISEARCH_DATAFILE="data/products.csv"
-AZURE_AISEARCH_ENDPOINT=
-AZURE_AISEARCH_INDEX="zava-products"
+AZURE_SEARCH_DATAFILE="data/products.csv"
+AZURE_SEARCH_ENDPOINT=
+AZURE_SEARCH_INDEX_NAME="zava-products"
+AZURE_SEARCH_API_KEY=
