--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,4 +16,4 @@ pandas              # For data manipulation and analysis
 ## ..... Azure Dependencies
 azure-search-documents==11.5.3  # For Azure AI Search
 azure-identity                  # For Azure authentication
-azure-ai-evaluation             # For Azure evaluation
+azure-ai-evaluation==1.12.0     # For model evaluation (pinned to 1.12.0 - stable version from Oct 2, 2025)
