--- a/src/scripts/.env.sample
+++ b/src/scripts/.env.sample
@@ -1,20 +1,30 @@
-# .... Azure 
-AZURE_SUBSCRIPTION_ID=
-AZURE_RESOURCE_GROUP=
+# Azure Environment Variables
+# 
+# To auto-generate the .env file with values from your Azure resource group, run:
+#   ./src/scripts/update-env.sh <your-resource-group-name>
+#
+# Example:
+#   ./src/scripts/update-env.sh rg-nitya-LTG151
+#
+# This will automatically populate all values below from your Azure resources.
+# The .env file will be created in the repository root (two levels up from this folder).
 
-# .... Azure AI Foundry
-AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_API_VERSION="2025-02-01-preview" 
-AZURE_AI_FOUNDRY_NAME=
-AZURE_AI_PROJECT_NAME=
+# Azure Subscription and Resource Group
+AZURE_SUBSCRIPTION_ID="your-subscription-id"
+AZURE_RESOURCE_GROUP="your-resource-group-name"
 
-# .... Azure AI Foundry Deployment
+# Azure OpenAI Configuration
+AZURE_OPENAI_API_KEY="your-openai-api-key"
+AZURE_OPENAI_ENDPOINT="https://your-resource.openai.azure.com/"
+AZURE_OPENAI_API_VERSION="2025-02-01-preview"
 AZURE_OPENAI_DEPLOYMENT="gpt-4.1"
 AZURE_OPENAI_MODEL_VERSION="2025-04-14"
 
-# .... Azure AI Search
-AZURE_SEARCH_DATAFILE="data/products.csv"
-AZURE_SEARCH_ENDPOINT=
+# Azure AI Foundry Configuration
+AZURE_AI_FOUNDRY_NAME="your-ai-foundry-name"
+AZURE_AI_PROJECT_NAME="your-project-name"
+
+# Azure AI Search Configuration
+AZURE_SEARCH_ENDPOINT="https://your-search.search.windows.net/"
 AZURE_SEARCH_INDEX_NAME="zava-products"
-AZURE_SEARCH_API_KEY=
+AZURE_SEARCH_API_KEY="your-search-api-key"
